# rag-quest

./: .beads-issues.md  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUG_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  FIXES_APPLIED.md  GAME_TEST_RESULTS.md  ISSUES_FROM_TEST.md  LICENSE  P3_FIXES_SUMMARY.md  PLAYTEST_FINDINGS.md  PLAYTEST_INDEX.md  PLAYTEST_SUMMARY.md  PLAYTEST_SUMMARY.txt  PROJECT_INDEX.md  QUICKSTART.md  RAG-Quest_User_Guide.docx  README.md  ROADMAP.md  Recall-MCP-Setup-Guide.docx  TEST_SUMMARY.txt  V050_PLAYTEST_FINDINGS.md  V051_FIX_SUMMARY.md  V052_BUG_FIX_SUMMARY.md  final_test.txt  gjio01eaqeaureruimlvpisdeajjf6h0.darc  h18nqgserhavkdiinsbj6qncd4ajjvam.darc  jsbsjv81ifaptdethcqjvuppdqcj8uhd.darc  manifest  playtest_50.py  playtest_50_log.txt  playthrough_log.txt  playthrough_log_fast.txt  playthrough_log_mock.txt  playthrough_results_mock.json  pyproject.toml  requirements.txt  (+13 more)
.beads/: metadata.json
.claude/: settings.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Extending RAG-Quest Using Features from Existing AI Dungeon Master Projects.md  MEMORY_ARCHITECTURE.md  ROADMAP.md  TEST_REPORT.md  TEST_REPORT_v04.md
rag_quest/: __init__.py  __main__.py  _debug.py  config.py  startup.py  tutorial.py  ui.py
scripts/: e2e_v06_playtest.py
tests/: conftest.py  test_config_defaults.py  test_debug_logging.py  test_engine_turn.py  test_from_dict_hardening.py  test_memory_assembler.py  test_memory_assembler_narrator_integration.py  test_narrator_rag_context.py  test_ollama_thinking_strip.py  test_relationship_delta_fold.py  test_save_layout_unification.py  test_state_parser_damage.py  test_state_parser_healing.py  test_state_parser_markdown.py  test_v06_campaign_memory.py  test_v07_base_menu.py  test_v07_bases.py  test_v07_modules.py  test_v07_new_module.py  test_v07_rqworld_export.py  test_v07_save_format.py  test_v07_validate.py  test_v081_web_ui.py  test_v082_onboarding.py  test_v083_web_command_menu.py  test_v08_save_sync.py  test_v08_streaming.py  test_v08_web_projection.py  test_v08_web_read.py  test_v08_web_scaffold.py  test_v08_web_static.py  test_v08_web_stream.py  test_v08_web_turn.py  test_world_db.py  test_world_db_batch_snapshot.py  test_world_db_integration.py  (+1 more)
(+58 files in other folders)
