[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-quest"
version = "0.7.1"
description = "AI-powered D&D-style text RPG with multiplayer, persistent saves, world sharing, achievements, and procedural dungeons"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "RAG-Quest Contributors"},
]
keywords = ["rpg", "game", "ai", "rag", "knowledge-graph", "text-adventure", "combat", "tts"]
license = {text = "MIT"}

dependencies = [
    "lightrag-hku>=1.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pymupdf>=1.24",
    "pyttsx3>=2.90",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
rag-quest = "rag_quest.__main__:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_quest*"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
